[gd_scene load_steps=5 format=3 uid="uid://dgm03pu34032m"]

[ext_resource type="Script" uid="uid://d6xrs2lxn4lc" path="res://Scripts/projectile.gd" id="1_umxe1"]
[ext_resource type="Texture2D" uid="uid://bk8qao521iy21" path="res://Assets/Sprites/Spritesheet.png" id="2_vxn5h"]
[ext_resource type="AudioStream" uid="uid://qbp6c7mpjsah" path="res://Assets/Audio/rubble-crash-275691.mp3" id="3_umxe1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_umxe1"]
radius = 14.0357

[node name="boulder" type="Area2D"]
collision_layer = 8
collision_mask = 49
script = ExtResource("1_umxe1")
damage = 20
sound_stream = ExtResource("3_umxe1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_vxn5h")
region_enabled = true
region_rect = Rect2(1661, 33, 37, 25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
shape = SubResource("CircleShape2D_umxe1")

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="projectile_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_umxe1")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="timeout" from="destroy_timer" to="." method="_on_destroy_timer_timeout"]
